Drop unused test headers and unused properties in TEST.ROOT