@@ -31,14 +31,6 @@ import org.testng.annotations.Test;
 import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertNotNull;
 
-/*
- * @test
- * @library /lib
- * @build JextractToolRunner
- * @bug 8251943
- * @summary jextract should not generate MemorySegment typed fields for variables, struct fields if layout size info is not available
- * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8251943
- */
 public class Test8251943 extends JextractToolRunner {
 
     @Test
